Fix T60504: Armature wire draw type hidden when unselected